@@ -1,2 +1,4 @@
+[B]1.0.1:[/B]
+Oprava na youtube
 [B]1.0.0:[/B]
 Prvni verze
